# freeimage

./: BUILD.bazel  MODULE.bazel  WORKSPACE
Source/DeprecationManager/: DeprecationMgr.cpp
Source/FreeImage/: PluginGIF.cpp  PluginTIFF.cpp
Source/Metadata/: TagConversion.cpp
